My first home work on java